fix letter spacing

--- a/static/css/customizations.css
+++ b/static/css/customizations.css
@@ -65,7 +65,6 @@ h1, h2, h3, h4,
 }
 main {
     font-family: "Gentium Book Basic", serif;
-    letter-spacing: 0.5px;
 }
 .verse {
     white-space: pre-wrap;
